[package]
name = "url_shortener"
version = "0.1.0"
authors = ["mwish <anmmscs_maple@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bloom_filter = { path = "../bloom_filter" }
snowflake = { path = "../snowflake" }
